k8s/workloads/commafeed/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  labels:
    app: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: commafeed
          image: athou/commafeed:latest-postgresql-jvm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: data
              mountPath: /commafeed/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: commafeed
spec:
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: commafeed
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: commafeed
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`commafeed.rvserver.online`)
      kind: Rule
      services:
        - name: commafeed
          port: 80
